--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,8 +10,12 @@ jobs:
     - uses: actions/checkout@v2
 
     - uses: actions/setup-java@v1
+      with:
+        java-version: '21.x'
 
     - uses: subosito/flutter-action@v1
+      with:
+        flutter-version: '3.x'
 
     - run: flutter pub get
 
